--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            
             <div class="container">
                 <div class="form">
-                    <h2>你是大傻瓜，全靠你爹C</h2>
+                    <h2>呜呜呜，我是菜鸡</h2>
   
                 </div>
             </div>
